# multi-array-testing

./: CMakeLists.txt  README.md  ca-serial.cpp  ma-blas.cpp  ma-cuda-daxpy.cu  ma-openacc.cpp  ma-serial.cpp
cuda-tests/: CMakeLists.txt  ma-cuda-daxpy.cu
math-lib/: CMakeLists.txt  ma-blas.cpp
openmp/: CMakeLists.txt  ca-parallel.cpp  ma-parallel.cpp
serial/: CMakeLists.txt  ca-serial.cpp  ma-serial.cpp
